fix/corrections
