# talent-api/server/api/controllers/folders/router.ts
@@ -8,5 +8,5 @@ export default express
   .get('/dossier/:uuid', folderController.byUuid)
   .get('/:folderId', folderController.byId)
   .put('/:folderId', folderController.updateById)
-  .put('/state/:folderId', folderController.updateStateById)
+  .put('/status/:folderId', folderController.updateStatusById)
   .delete('/:folderId', folderController.deleteById);
